--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -31,7 +31,6 @@
 <div class="field form-group ">
           <%= f.label :password %> 
           <% if @minimum_password_length %>
-            <em><i>(<%= @minimum_password_length %> characters minimum)</i></em>
           <% end %>
           <%= f.password_field :password, class:"form-control", placeholder:"(leave blank if you don't want to change it)"%>
         </div>
@@ -49,20 +48,21 @@
             <%= f.password_field :current_password, class:"form-control" %>
           </div>
 <br>
-    <div class="card" style="width: auto">
-      <div class="card-header">
-        Two factor authentication
-      </div>
+
+    <div class="card" style="width: auto;">
       <div class="card-body">
+        <h5 class="card-title">Two Factor Authentication</h5>
+        <h6 class="card-subtitle mb-2 text-muted">Enable or disable two factor authentication.</h6>
         <% if current_user.otp_required_for_login %>
-          <p>Two factor authentication is enabled.</p>
-          <p><%= link_to('Disable Two Factor Authentication', two_factor_settings_path, class: 'btn btn-danger', method: :delete, data: {confirm: 'Are you sure you want to disable two factor authentication?'}) %></p>
+          <p class="card-text">Two factor authentication is <strong>enabled</strong>.</p>
+          <p><%= link_to('Disable Two Factor Authentication', two_factor_settings_path, class: 'btn btn-outline-danger', method: :delete, data: {confirm: 'Are you sure you want to disable two factor authentication?'}) %></p>
         <% else %>
-          <p>Two factor authentication is NOT enabled.</p>
-          <p><%= link_to('Enable Two Factor Authentication', new_two_factor_settings_path, class: 'btn btn-primary') %></p>
+          <p>Two factor authentication is <strong>disabled</strong>.</p>
+          <p><%= link_to('Enable Two Factor Authentication', new_two_factor_settings_path, class: 'btn btn-outline-success') %></p>
         <% end %>
       </div>
     </div>
+    
 
     <br/>
     <div class="d-grid gap-2 d-md-flex justify-content-md-end">
