--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,93 +1,82 @@
 <div class="container">
-  <h2>Settings</h2>
-
-  <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-    
-    <%= render "devise/shared/error_messages", resource: resource %>
-  <h5>User Information Settings</h5>
-    <div class="row">
-      <div class="col"> 
-          <div class="field form-group">
-            <%= f.label :first_name %><br/>
-            <%= f.text_field :first_name, class:"form-control", autofocus: true%>
-          </div>
-
-      </div>
-      <div class="col">
-        <div class="field form-group">
-          <%= f.label :last_name %><br/>
-          <%= f.text_field :last_name, class:"form-control col-sm-10"%>
+    <h2>Settings</h2>
+    <div class="card">
+        <div class="card-body">
+            <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+            <%= render "devise/shared/error_messages", resource: resource %>
+            <h5>User Information Settings</h5>
+            <div class="row">
+                <div class="col">
+                    <div class="field form-group">
+                        <%= f.label :first_name %><br />
+                        <%= f.text_field :first_name, class:"form-control", autofocus: true%>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="field form-group">
+                        <%= f.label :last_name %><br />
+                        <%= f.text_field :last_name, class:"form-control col-sm-10"%>
+                    </div>
+                </div>
+                <br>
+            </div>
+            <div class="field form-group">
+                <%= f.label :email %><br />
+                <%= f.email_field :email, class:"form-control" %>
+            </div>
+            <br>
+            <h5> Password Settings </h5>
+            <div class="field form-group ">
+                <%= f.label :password %>
+                <% if @minimum_password_length %>
+                <% end %>
+                <%= f.password_field :password, class:"form-control", placeholder:"(leave blank if you don't want to change it)"%>
+            </div>
+            <div class="field form-group">
+                <%= f.label :password_confirmation %>
+                <%= f.password_field :password_confirmation, class:"form-control" %>
+            </div>
+            <br>
+            <h5> Confirm Changes </h5>
+            <div class="field form-group">
+                <%= f.label "Enter current password to confirm changes:" %> <br />
+                <%= f.password_field :current_password, class:"form-control" %>
+            </div>
         </div>
-      </div>
-      <br>     
     </div>
-          <div class="field form-group">
-            <%= f.label :email %><br/>
-            <%= f.email_field :email, class:"form-control" %>
-          </div>
-<br>
-<h5> Password Settings </h5>
-
-<div class="field form-group ">
-          <%= f.label :password %> 
-          <% if @minimum_password_length %>
-          <% end %>
-          <%= f.password_field :password, class:"form-control", placeholder:"(leave blank if you don't want to change it)"%>
-        </div>
-
-          <div class="field form-group">
-            <%= f.label :password_confirmation %>
-            <%= f.password_field :password_confirmation, class:"form-control" %>
-          </div>
-
-<br>
-    <h5> Confirm Changes </h5>
-
-        <div class="field form-group">
-            <%= f.label "Enter current password to confirm changes:" %> <br/>
-            <%= f.password_field :current_password, class:"form-control" %>
-          </div>
-<br>
-
+    <br>
     <div class="card" style="width: auto;">
-      <div class="card-body">
-        <h5 class="card-title">Two Factor Authentication</h5>
-        <h6 class="card-subtitle mb-2 text-muted">Enable or disable two factor authentication.</h6>
-        <% if current_user.otp_required_for_login %>
-          <p class="card-text">Two factor authentication is <strong>enabled</strong>.</p>
-          <p><%= link_to('Disable Two Factor Authentication', two_factor_settings_path, class: 'btn btn-outline-danger', method: :delete, data: {confirm: 'Are you sure you want to disable two factor authentication?'}) %></p>
-        <% else %>
-          <p>Two factor authentication is <strong>disabled</strong>.</p>
-          <p><%= link_to('Enable Two Factor Authentication', new_two_factor_settings_path, class: 'btn btn-outline-success') %></p>
-        <% end %>
-      </div>
+        <div class="card-body">
+            <h5 class="card-title">Two Factor Authentication</h5>
+            <h6 class="card-subtitle mb-2 text-muted">Enable or disable two factor authentication.</h6>
+            <% if current_user.otp_required_for_login %>
+            <p class="card-text">Two factor authentication is <strong>enabled</strong>.</p>
+            <p>
+                <%= link_to('Disable Two Factor Authentication', two_factor_settings_path, class: 'btn btn-outline-danger', method: :delete, data: {confirm: 'Are you sure you want to disable two factor authentication?'}) %>
+            </p>
+            <% else %>
+            <p>Two factor authentication is <strong>disabled</strong>.</p>
+            <p>
+                <%= link_to('Enable Two Factor Authentication', new_two_factor_settings_path, class: 'btn btn-outline-success') %>
+            </p>
+            <% end %>
+        </div>
     </div>
-    
-
-    <br/>
+    <br />
     <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-      <%= f.submit "Update", class:'btn btn-outline-primary .btn-block' %>
-      <%= link_to "Back", :back, class:'btn btn-light .btn-block' %>
+        <%= f.submit "Update", class:'btn btn-outline-primary .btn-block' %>
+        <%= link_to "Back", :back, class:'btn btn-light .btn-block' %>
     </div>
-  
-    
     <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-      <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+    <div>Currently waiting confirmation for:
+        <%= resource.unconfirmed_email %>
+    </div>
     <% end %>
-  <% end %>
-
-
+    <% end %>
     <br />
-
     <br />
-  </div>
-
 </div>
-
-
-
-
-
+</div>
 <!--
   <h3>Cancel my account</h3>
 
