--- a/app/views/audit_logs/index.html.erb
+++ b/app/views/audit_logs/index.html.erb
@@ -1,107 +1,137 @@
 <div class="container" style=" margin-bottom: 50px;">
-<!-- <p id="notice"><%= notice %></p> -->
-
-<h1>System Audit Logs</h1>
-
-<!-- Search Form Start -->
-<div>
-   <%= search_form_for @q do |f| %>
-    <div class="row">
-      <div class="col">
-        <%= f.label "Event contains:"%>
-        <%= f.search_field :event_cont, class:"form-control me-2", placeholder:"Search Event" %>
-        
-        <%= f.label "Page contains:"%>
-        <%= f.search_field :table_name_cont, class:"form-control me-2", placeholder:"Search Page" %>
-        
-        <%= f.label "Start Date:"%>
-        <%= f.date_field :date_created_gteq, class:"form-control me-2", placeholder:"Search Date" %>
-      </div>
-      <div class="col">
-        <%= f.label "User Email contains:"%>
-        <%= f.search_field :modifier_cont, class:"form-control me-2", placeholder:"Search User Email" %>
-        
-        <%= f.label "Record name contains:"%>
-        <%= f.search_field :object_name_cont, class:"form-control me-2", placeholder:"Search Record Name" %>
-
-        <%= f.label "Date End:"%>
-        <%= f.date_field :date_created_lteq, class:"form-control me-2 ", placeholder:"Search Date" %>
-      </div>
+    <!-- <p id="notice"><%= notice %></p> -->
+    <h1>System Audit Logs</h1>
+    <!-- Search Form Start -->
+    <p>
+        <button class="btn btn-outline-primary" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+            Search and Filter
+        </button>
+    </p>
+    <div class="collapse" id="collapseExample">
+        <div class="card card-body" style="margin-bottom: 20px;">
+            <%= search_form_for @q do |f| %>
+            <div class="row">
+                <div class="col">
+                    <%= f.label "Event contains:"%>
+                    <%= f.search_field :event_cont, class:"form-control me-2", placeholder:"Search Event" %>
+                    <%= f.label "Page contains:"%>
+                    <%= f.search_field :table_name_cont, class:"form-control me-2", placeholder:"Search Page" %>
+                    <%= f.label "Start Date:"%>
+                    <%= f.date_field :date_created_gteq, class:"form-control me-2", placeholder:"Search Date" %>
+                </div>
+                <div class="col">
+                    <%= f.label "User Email contains:"%>
+                    <%= f.search_field :modifier_cont, class:"form-control me-2", placeholder:"Search User Email" %>
+                    <%= f.label "Record name contains:"%>
+                    <%= f.search_field :object_name_cont, class:"form-control me-2", placeholder:"Search Record Name" %>
+                    <%= f.label "Date End:"%>
+                    <%= f.date_field :date_created_lteq, class:"form-control me-2 ", placeholder:"Search Date" %>
+                </div>
+            </div>
+            <!-- Buttons -->
+            <div style="float: right; margin-top: 10px; margin-bottom: 20px ;">
+                <%= f.submit "Search", class:"btn btn-outline-primary text-center"%>
+                <%= link_to "Reset Search", request.path, class:"btn btn-light text-center " %>
+            </div>
+            <% end %>
+        </div>
     </div>
-    <!-- Buttons -->
-    <div style="float: right; margin-top: 10px; margin-bottom: 20px ;">
-      <%= f.submit "Search", class:"btn btn-outline-primary text-center"%> 
-      <%= link_to "Reset Search", request.path, class:"btn btn-light text-center " %>   
-    </div>
-   <% end %>
-</div>
-
-
-  <!-- Search Form End -->
-
-  <br>
-  <% if AuditLog.count > 40 && @f.count > 40 %>   
+    <!-- Search Form End -->
+    <% if AuditLog.count > 40 && @f.count > 40 %>
     <%== pagy_bootstrap_nav(@pagy) %>
-  <% end %>
-
-<br>
-
-  <table class="table table-hover table-bordered ">
-    <thead>
-      <tr>
-        <th><%= sort_link(@q, :event, "Event", default_order: :asc)%></th>
-        <th><%= sort_link(@q, :modifier , "User", default_order: :asc)%></th>
-        <th><%= sort_link(@q, :table_name , "Page", default_order: :asc)%></th>
-        <th><%= sort_link(@q, :object_name , "Record Name", default_order: :asc)%> </th>
-        <th><%= sort_link(@q, :created_at , "Date", default_order: :asc)%></th>
-      </tr>
-    </thead>
-
-    <tbody>
-      <% @audit_logs.each do |a| %>
-        <tr>
-          <td><%= a.event %></td>
-          <td><%= a.modifier %></td>
-          <td><%= a.table_name %></td>
-          <td><%= a.object_name %></td>
-          <td><%= a.created_at.to_datetime.strftime("%B %d, %Y at %H:%M:%S") %></td>
-        </tr>
-      <% end %>
-    </tbody>
-  </table>
-
-  <!-- Content for PDF Export Start -->
-  <% content_for :pdf do %>
+    <% end %>
+    <br>
     <table class="table table-hover table-bordered ">
-      <thead>
-        <tr>
-          <th><%= sort_link(@q, :event, "Event", default_order: :asc)%></th>
-          <th><%= sort_link(@q, :modifier , "User", default_order: :asc)%></th>
-          <th><%= sort_link(@q, :table_name , "Page", default_order: :asc)%></th>
-          <th><%= sort_link(@q, :object_name , "Record Name", default_order: :asc)%> </th>
-          <th><%= sort_link(@q, :created_at , "Date", default_order: :asc)%></th>
-        </tr>
-      </thead>
-
-      <tbody>
-        <% @audit_logs.each do |a| %>
-        <%# @audit_logs[0..49].each do |a| %>
-          <tr>
-            <td><%= a.event %></td>
-            <td><%= a.modifier %></td>
-            <td><%= a.table_name %></td>
-            <td><%= a.object_name %></td>
-            <td><%= a.created_at.strftime("%F %T") %></td>
-          </tr>
-        <% end %>
-      </tbody>
+        <thead>
+            <tr>
+                <th>
+                    <%= sort_link(@q, :event, "Event", default_order: :asc)%>
+                </th>
+                <th>
+                    <%= sort_link(@q, :modifier , "User", default_order: :asc)%>
+                </th>
+                <th>
+                    <%= sort_link(@q, :table_name , "Page", default_order: :asc)%>
+                </th>
+                <th>
+                    <%= sort_link(@q, :object_name , "Record Name", default_order: :asc)%>
+                </th>
+                <th>
+                    <%= sort_link(@q, :created_at , "Date", default_order: :asc)%>
+                </th>
+            </tr>
+        </thead>
+        <tbody>
+            <% @audit_logs.each do |a| %>
+            <tr>
+                <td>
+                    <%= a.event %>
+                </td>
+                <td>
+                    <%= a.modifier %>
+                </td>
+                <td>
+                    <%= a.table_name %>
+                </td>
+                <td>
+                    <%= a.object_name %>
+                </td>
+                <td>
+                    <%= a.created_at.to_datetime.strftime("%B %d, %Y at %H:%M:%S") %>
+                </td>
+            </tr>
+            <% end %>
+        </tbody>
     </table>
-  <% end %>
-  <!-- Content for PDF Export End -->
-
-  <!-- Button -->
-  <div style="margin-top: 10px; margin-bottom:50px  ; float: right;">
-    <%= link_to "Export to PDF", audit_logs_path(@audit_logs, format: :pdf), target: '_blank', class:"btn btn-outline-primary text-center"%>
-  </div>
-
+    <!-- Content for PDF Export Start -->
+    <% content_for :pdf do %>
+    <table class="table table-hover table-bordered ">
+        <thead>
+            <tr>
+                <th>
+                    <%= sort_link(@q, :event, "Event", default_order: :asc)%>
+                </th>
+                <th>
+                    <%= sort_link(@q, :modifier , "User", default_order: :asc)%>
+                </th>
+                <th>
+                    <%= sort_link(@q, :table_name , "Page", default_order: :asc)%>
+                </th>
+                <th>
+                    <%= sort_link(@q, :object_name , "Record Name", default_order: :asc)%>
+                </th>
+                <th>
+                    <%= sort_link(@q, :created_at , "Date", default_order: :asc)%>
+                </th>
+            </tr>
+        </thead>
+        <tbody>
+            <% @audit_logs.each do |a| %>
+            <%# @audit_logs[0..49].each do |a| %>
+            <tr>
+                <td>
+                    <%= a.event %>
+                </td>
+                <td>
+                    <%= a.modifier %>
+                </td>
+                <td>
+                    <%= a.table_name %>
+                </td>
+                <td>
+                    <%= a.object_name %>
+                </td>
+                <td>
+                    <%= a.created_at.strftime("%F %T") %>
+                </td>
+            </tr>
+            <% end %>
+        </tbody>
+    </table>
+    <% end %>
+    <!-- Content for PDF Export End -->
+    <!-- Button -->
+    <div style="margin-top: 10px; margin-bottom:50px  ; float: right;">
+        <%= link_to "Export to PDF", audit_logs_path(@audit_logs, format: :pdf), target: '_blank', class:"btn btn-outline-primary text-center"%>
+    </div>
 </div>
