--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -3,9 +3,9 @@
         <%= @island.island_name%> Clients</h1>
     <!-- Search Forms Start -->
     <p>
-        <button class="btn btn-outline-primary" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+        <a class="btn btn-outline-primary" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
             Search and Filter
-        </button>
+        </a>
     </p>
     <div class="collapse" id="collapseExample">
         <div class="card card-body" style="margin-bottom: 20px;">
@@ -27,8 +27,11 @@
             <% end %>
         </div>
     </div>
+    <% if Client.count > @clients.count %>
+    <%= link_to "Reset Search", request.path, class:"btn btn-outline-secondary" %>
+    <br><br>
+    <% end %>
     <!-- Search Forms End -->
-
     <table class="table table-hover table-bordered ">
         <thead>
             <tr>
