--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,4 +1,6 @@
-<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #56C6EA;">
+    
+<nav class="navbar navbar-expand-lg navbar-light" style="background: linear-gradient(to right, rgba(79,172,254,1), rgba(0,242,254,1)); ">
+
     <div class="container-fluid">
         <%= link_to image_tag("logo.png", :size => "150x100"), root_path, class:"navbar-brand", style:"margin-left: 15px; margin-top: 5px; margin-bottom: 10px;"%>
         <% if current_user.first_name == nil || current_user.last_name == nil %>
