--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -3,45 +3,56 @@
     <div class="card">
         <div class="card-body">
             <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-            <%= render "devise/shared/error_messages", resource: resource %>
-            <h5>User Information Settings</h5>
-            <div class="row">
-                <div class="col">
-                    <div class="field form-group">
-                        <%= f.label :first_name %><br />
-                        <%= f.text_field :first_name, class:"form-control", autofocus: true%>
+                <%= render "devise/shared/error_messages", resource: resource %>
+                <h5>User Information Settings</h5>
+                <div class="row">
+                    <div class="col">
+                        <div class="field form-group">
+                            <%= f.label :first_name %><br />
+                            <%= f.text_field :first_name, class:"form-control" %>
+                        </div>
                     </div>
+                    <div class="col">
+                        <div class="field form-group">
+                            <%= f.label :last_name %><br />
+                            <%= f.text_field :last_name, class:"form-control col-sm-10" %>
+                        </div>
+                    </div>
+                    <br>
                 </div>
-                <div class="col">
-                    <div class="field form-group">
-                        <%= f.label :last_name %><br />
-                        <%= f.text_field :last_name, class:"form-control col-sm-10"%>
-                    </div>
+                <div class="field form-group">
+                    <%= f.label :email %><br />
+                    <%= f.email_field :email, class:"form-control" %>
                 </div>
                 <br>
-            </div>
-            <div class="field form-group">
-                <%= f.label :email %><br />
-                <%= f.email_field :email, class:"form-control" %>
-            </div>
-            <br>
-            <h5> Password Settings </h5>
-            <div class="field form-group ">
-                <%= f.label :password %>
-                <% if @minimum_password_length %>
+                <h5> Password Settings </h5>
+                <div class="field form-group ">
+                    <%= f.label :password %>
+                    <% if @minimum_password_length %>
+                    <% end %>
+                    <%= f.password_field :password, class:"form-control", placeholder:"(leave blank if you don't want to change it)", autocomplete: 'disabled' %>
+                </div>
+                <div class="field form-group">
+                    <%= f.label :password_confirmation %>
+                    <%= f.password_field :password_confirmation, class:"form-control", autocomplete: 'disabled' %>
+                </div>
+                <br>
+                <h5> Confirm Changes </h5>
+                <div class="field form-group">
+                    <%= f.label "Enter current password to confirm changes:" %> <br />
+                    <%= f.password_field :current_password, class:"form-control", autocomplete: 'disabled' %>
+                </div>
+                <br>
+                <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+                    <%= f.submit "Update", class:'btn btn-outline-primary .btn-block' %>
+                    <%= link_to "Back", :back, class:'btn btn-light .btn-block' %>
+                </div>
+                <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+                <div>Currently waiting confirmation for:
+                    <%= resource.unconfirmed_email %>
+                </div>
                 <% end %>
-                <%= f.password_field :password, class:"form-control", placeholder:"(leave blank if you don't want to change it)"%>
-            </div>
-            <div class="field form-group">
-                <%= f.label :password_confirmation %>
-                <%= f.password_field :password_confirmation, class:"form-control" %>
-            </div>
-            <br>
-            <h5> Confirm Changes </h5>
-            <div class="field form-group">
-                <%= f.label "Enter current password to confirm changes:" %> <br />
-                <%= f.password_field :current_password, class:"form-control" %>
-            </div>
+            <% end %>
         </div>
     </div>
     <br>
@@ -63,16 +74,7 @@
         </div>
     </div>
     <br />
-    <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-        <%= f.submit "Update", class:'btn btn-outline-primary .btn-block' %>
-        <%= link_to "Back", :back, class:'btn btn-light .btn-block' %>
-    </div>
-    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for:
-        <%= resource.unconfirmed_email %>
-    </div>
-    <% end %>
-    <% end %>
+
     <br />
     <br />
 </div>
