--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -30,17 +30,17 @@
                     <%= f.label :password %>
                     <% if @minimum_password_length %>
                     <% end %>
-                    <%= f.password_field :password, class:"form-control", placeholder:"(leave blank if you don't want to change it)", autocomplete: 'disabled' %>
+                    <%= f.password_field :password, class:"form-control", placeholder:"(leave blank if you don't want to change it)", autocomplete:"new-password" %>
                 </div>
                 <div class="field form-group">
                     <%= f.label :password_confirmation %>
-                    <%= f.password_field :password_confirmation, class:"form-control", autocomplete: 'disabled' %>
+                    <%= f.password_field :password_confirmation, class:"form-control" %>
                 </div>
                 <br>
                 <h5> Confirm Changes </h5>
                 <div class="field form-group">
                     <%= f.label "Enter current password to confirm changes:" %> <br />
-                    <%= f.password_field :current_password, class:"form-control", autocomplete: 'disabled' %>
+                    <%= f.password_field :current_password, class:"form-control" %>
                 </div>
                 <br>
                 <div class="d-grid gap-2 d-md-flex justify-content-md-end">
