--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,78 +1,90 @@
 <div class="container">
-  <h1>User Management</h1>
-
-  <!-- Search Start -->
-  <div>
-    <%= search_form_for @q do |f|%>
-      <div class="row">
-        <div class="col">
-          <%= f.label :first_name_or_last_name_cont %>:
-          <%= f.search_field :first_name_or_last_name_cont , placeholder: "Search First Name", class:'form-control' %>
-          <div style="float: left ; margin-top: 10px; margin-bottom: 20px ;">
-            <%= link_to "User Invite", new_user_invitation_path, class:" btn btn-outline-primary float-end" %>
-          </div>
-
+    <h1>User Management</h1>
+    <!-- Search Start -->
+    <div>
+        <%= search_form_for @q do |f|%>
+        <div class="row">
+            <div class="col">
+                <%= f.label :first_name_or_last_name_cont %>:
+                <%= f.search_field :first_name_or_last_name_cont , placeholder: "Search First Name", class:'form-control' %>
+                <div style="float: left ; margin-top: 10px; margin-bottom: 20px ;">
+                    <%= link_to "User Invite", new_user_invitation_path, class:" btn btn-outline-primary float-end" %>
+                </div>
+            </div>
+            <div class="col">
+                <%= f.label :email_cont %>:
+                <%= f.search_field :email_cont , placeholder: "Search Email", class:'form-control' %>
+                <div style="float: right; margin-top: 10px; margin-bottom: 20px ;">
+                    <%= f.submit "Search", class: 'btn btn-outline-primary ' %>
+                    <%= link_to "Reset Search", request.path, class:"btn btn-light " %>
+                </div>
+            </div>
         </div>
-        <div class="col" >
-          <%= f.label :email_cont %>:
-          <%= f.search_field :email_cont , placeholder: "Search Email", class:'form-control' %>
-
-          <div style="float: right; margin-top: 10px; margin-bottom: 20px ;">
-            <%= f.submit "Search", class: 'btn btn-outline-primary ' %>  
-            <%= link_to "Reset Search", request.path, class:"btn btn-light " %>
-          </div>
-
+        <div>
         </div>
-      </div>
-      <div>
-        
-      </div>
-    <% end %>
-  </div>   
-  <!-- Search End -->
-
-
-<table class="table table-hover table-bordered ">
-  <thead>
-    <tr>
-      <th width="Auto"><%= sort_link(@q, :first_name, "Name", default_order: :asc)%></th>  <!-- Sorts through the names in alphabetical order-->
-      <th width="Auto"><%= sort_link(@q, :email, "Email", default_order: :asc)%></th>
-      <th width="Auto">Role</th>
-      <th width="10%">Delete</th>
-     <!--  <th scope="col" class="fa-solid fa-trash"></th> -->
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @users.each do |user| %>
-      <tr>
-        <td>
-          <% if user.first_name == nil || user.last_name == nil %>
-            <p> Not set by user <p>
-          <% else %>
-            <p><%= user.first_name %> <%= user.last_name %></p>
-          <% end %>
-        </td>
-        <td>
-            <p><%= user.email %></p>
-        </td>
-        <td>
-          <% if user.admin? %>
-          Admin
-          <% else %>
-          User
-          <% end %>
-        <td>
-          <% if current_user.email != user.email %>
-            <%= link_to ' ', user, class:"fa-solid fa-trash", method: :delete, data: { confirm: 'Are you sure?' }  %>
-          <% else %>
-            Current Account
-          <% end %>
-        </td>
-        <!--
-        <td><%#= link_to 'resend invitation', resend_invitation_user_path(user), method: :patch %></td>
-        <td><%#= link_to 'ban user', ban_user_path(user), method: :patch %></td>-->
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+        <% end %>
+    </div>
+    <!-- Search End -->
+    <table class="table table-hover table-bordered">
+        <thead>
+            <tr>
+                <th width="20%">
+                    <%= sort_link(@q, :first_name, "Name", default_order: :asc)%>
+                </th> <!-- Sorts through the names in alphabetical order-->
+                <th width="30%">
+                    <%= sort_link(@q, :email, "Email", default_order: :asc)%>
+                </th>
+                <th width="10%">Role</th>
+                <th width="20%">Delete</th>
+                <th width="20%">Account Status</th>
+                <!--  <th scope="col" class="fa-solid fa-trash"></th> -->
+            </tr>
+        </thead>
+        <tbody>
+            <% @users.each do |user| %>
+            <tr>
+                <td>
+                    <% if user.first_name == nil || user.last_name == nil %>
+                    <p class="text-break"> Not set by user <p>
+                            <% else %>
+                            <p>
+                                <%= user.first_name %>
+                                <%= user.last_name %>
+                            </p>
+                            <% end %>
+                </td>
+                <td>
+                    <p class="text-break">
+                        <%= user.email %>
+                    </p>
+                </td>
+                <td>
+                    <p class="text-break">
+                        <% if user.admin? %>
+                        Admin
+                        <% else %>
+                        User
+                        <% end %>
+                    </p>
+                <td>
+                    <div class="position-relative">
+                        <% if current_user.email != user.email %>
+                        <%= button_to 'delete user', user, class:"btn btn-outline-danger", style:"width: 100%", method: :delete, data: { confirm: 'Are you sure?' }  %>
+                        <% else %>
+                        <div class="text-center">
+                            <p style="color:green">Current Account</p>
+                        </div>
+                        <% end %>
+                    </div>
+                </td>
+                <td>
+                    <% if user.created_by_invite? && user.invitation_accepted? == false %>
+                    <%= button_to 'Waiting for activation, Resend invitation?', resend_invitation_user_path(user), method: :patch, class:"btn btn-outline-warning text-wrap", style:"width: auto" %>
+                    <% else %>
+                    <p style="color:green">Account is active</p>
+                    <% end %>
+                </td>
+            </tr>
+            <% end %>
+        </tbody>
+    </table>
