--- a/app/views/islands/index.html.erb
+++ b/app/views/islands/index.html.erb
@@ -11,11 +11,11 @@
             <%= search_form_for @q do |f| %>
             <div class="row">
                 <div class="col">
-                    <%= f.label "Island Name Contains:" %>
+                    <%= f.label "Island Name" %>
                     <%= f.text_field :island_name_cont, :class => "form-control" , placeholder:"Search Island" %>
                 </div>
                 <div class="col">
-                    <%= f.label "Client Name Contains:" %>
+                    <%= f.label "Client Name" %>
                     <%= f.text_field :clients_client_name_cont, :class => "form-control", placeholder:"Search Client" %>
                     <div style="float: right; margin-top: 10px; margin-bottom: 20px ;">
                         <%= f.submit "Search", class:"btn 
