--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -20,14 +20,13 @@
                     <%= f.text_field :deep_wells_deep_well_name_cont, :class => "form-control", placeholder:"Search Deepwell" %>
                     <div style="float: right; margin-top: 10px; margin-bottom: 20px ;">
                         <%= f.submit "Search", class:"btn btn-outline-primary text-center" %>
-                        <%= link_to "Reset Search", request.path, class:"btn btn-light text-center" %>
                     </div>
                 </div>
             </div>
             <% end %>
         </div>
     </div>
-    <% if Client.count > @clients.count %>
+    <% if @current_island_clients.count > @clients.count %>
     <%= link_to "Reset Search", request.path, class:"btn btn-outline-secondary" %>
     <br><br>
     <% end %>
@@ -64,7 +63,7 @@
     </table>
     <br>
     <div class="d-flex justify-content-between">
-        <% if Client.count > 10 && @f.count > 10 %>
+        <% if @current_island_clients.count > 10 && @f.count > 10 %>
         <%== pagy_bootstrap_nav(@pagy) %>
         <% end %>
         <div style="float:end; padding-bottom: 10px;">
