--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -23,7 +23,7 @@
                     <%= f.email_field :email, class:"form-control", placeholder:"Email", autofocus: true, autocomplete: "email" %>
                     <div class="d-flex flex-column flex-lg-row justify-content-lg-center panel">
                         <div class="mr-auto p-2">
-                            <%= f.submit "Send Reset Password", class:'btn btn-light .btn-block' %>
+                            <%= f.submit "Reset Password", class:'btn btn-light .btn-block' %>
                         </div>
                         <div class="p-2">
                             <%= link_to 'Back to Login', user_session_path, class: 'btn btn-light' %>
