--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -3,7 +3,7 @@
         <%= @island.island_name%> Clients</h1>
     <!-- Search Forms Start -->
     <p>
-        <a class="btn btn-outline-primary" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+        <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
             Search and Filter
         </a>
     </p>
@@ -12,24 +12,24 @@
             <%= search_form_for @q, url: island_clients_path(params[:island_id]) do |f| %>
             <div class="row">
                 <div class="col">
-                    <%= f.label "Client Name"%>
+                    <b><%= f.label "Client Name:"%></b>
                     <%= f.search_field :client_name_cont, class:"form-control me-2", placeholder:"Search Client"%>
                 </div>
                 <div class="col">
-                    <%= f.label "Deep Well Name"%>
+                    <b><%= f.label "Deep Well Name:"%></b>
                     <%= f.text_field :deep_wells_deep_well_name_cont, :class => "form-control", placeholder:"Search Deepwell" %>
                     <div style="float: right; margin-top: 10px; margin-bottom: 20px ;">
-                        <%= f.submit "Search", class:"btn btn-outline-primary text-center" %>
+                        <%= f.submit "Search", class:"btn btn-light text-center" %>
+                    <% if @current_island_clients.count > @clients.count %>
+                        <%= link_to "Reset Search", request.path, class:"btn btn-secondary" %>
+                    <br><br>
+                    <% end %>
                     </div>
                 </div>
             </div>
             <% end %>
         </div>
     </div>
-    <% if @current_island_clients.count > @clients.count %>
-    <%= link_to "Reset Search", request.path, class:"btn btn-outline-secondary" %>
-    <br><br>
-    <% end %>
     <!-- Search Forms End -->
     <table class="table table-hover table-bordered ">
         <thead>
@@ -67,7 +67,7 @@
         <%== pagy_bootstrap_nav(@pagy) %>
         <% end %>
         <div style="float:end; padding-bottom: 10px;">
-            <%= link_to 'New Client', new_island_client_path, class:"btn btn-outline-primary"%>
+            <%= link_to 'New Client', new_island_client_path, class:"btn btn-primary"%>
             &nbsp;
             <%= link_to 'Back', islands_path, class:"btn btn-light" %> &nbsp;
         </div>
