--- a/app/views/deep_wells/index.html.erb
+++ b/app/views/deep_wells/index.html.erb
@@ -6,7 +6,7 @@
         <%= search_form_for @q, url: client_deep_wells_path(params[:client_id]) do |f| %>
         <div class="row">
             <div class="col">
-                <%= f.label "Deepwell name"%>
+                <b><%= f.label "Deepwell name:"%></b>
                 <%= f.search_field :deep_well_name_cont, class:"form-control me-2", placeholder:"Search Deepwell" %>
             </div>
             <div class="col">
